--- a/DatingApp/client/src/app/app.component.html
+++ b/DatingApp/client/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <ul>
     <li *ngFor="let user of users">
-      {{user.id}} - {{user.userName}}
+        <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+         {{user.id}} - {{user.userName}}
     </li>
 </ul>
