--- a/DatingApp/client/src/app/app.component.html
+++ b/DatingApp/client/src/app/app.component.html
@@ -2,22 +2,7 @@
 <div class="container" style="margin-top:100px">
   <ul>
     <li *ngFor="let user of [{id:1,username:'bob'}]">
-      {{user.username}} - {{user.id}}
+      {{user.username}}
     </li>
   </ul>
 </div>
-
-
-
-
-<!-- <h1>{{title}}</h1>
-
-<ul>
-    <li *ngFor="let user of users">
-       
-         {{user.id}} - {{user.userName}}
-    </li>
-</ul> -->
-
-
-
