--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -3,13 +3,8 @@
   
       <a class="navbar-brand" href="#">Dating App 📅</a>
   
-      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button> -->
   
-      <!-- <div class="collapse navbar-collapse" id="navbarCollapse"> -->
-        <ul class="navbar-nav mr-auto">
+        <ul *ngIf="loggedIn" class="navbar-nav mr-auto">
           <li class="nav-item ">
             <a class="nav-link" href="#">Matches</a>
           </li>
@@ -19,15 +14,27 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Messages</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="logout()" href="#">Logout</a>
+          </li>
         </ul>
-        <form class="form-inline mt-2 mt-md-0" #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off">
-          <input name="username" [(ngModel)]="model.username" class="form-control mr-sm-2" type="text" placeholder="Username">
+  
+        <div class="dropdown" *ngIf="loggedIn" dropdown>
+          <a class="text-light dropdown-toggle" dropdownToggle>welcome user</a>
+          <div class="dropdown-menu mt-3" *dropdownMenu>
+            <a class="dropdown-item">Edit Profile</a>
+            <li class="dropdown-divider"></li>
+            <a class="dropdown-item" (click)="logout()">Logout</a>
+          </div>
+        </div>
+  
+  
+        <form *ngIf="!loggedIn" class="form-inline mt-2 mt-md-0" #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off">
+          <input name="username"  [(ngModel)]="model.username" class="form-control mr-sm-2" type="text" placeholder="Username">
           <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password" placeholder="Password">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">{{model.username}}</button>
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
         </form>
-
-        
+  
       </div>
     <!-- </div> -->
   </nav>
-  
