--- a/DatingApp/client/src/app/app.component.html
+++ b/DatingApp/client/src/app/app.component.html
@@ -1,8 +1,4 @@
 <app-nav></app-nav>
 <div class="container" style="margin-top:100px">
-  <ul>
-    <li *ngFor="let user of [{id:1,username:'bob'}]">
-      {{user.username}}
-    </li>
-  </ul>
+  <app-home></app-home>
 </div>
