--- a/DatingApp/client/src/app/home/home.component.html
+++ b/DatingApp/client/src/app/home/home.component.html
@@ -10,7 +10,7 @@
   <div *ngIf="registerMode" class="container">
     <div class="row justify-content-center">
       <div class="col-4">
-        <p><app-register [usersFromHomeComponent]="users"></app-register></p>
+        <p><app-register [usersFromHomeComponent]="users" (cancelRegister)="cancelRegisterMode($event)"></app-register></p>
       </div>
     </div>
   </div>
