register users to database

--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
 
-    <a class="navbar-brand" href="#">Dating App 📅 {{currentUser$ | async}}</a>
+    <a class="navbar-brand" href="#">Dating App 📅 </a>
 
 
       <ul *ngIf="currentUser$ | async " class="navbar-nav mr-auto">
