--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -1,18 +1,18 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
 
-    <a class="navbar-brand" href="#">Dating App 📅 </a>
-
+    <a class="navbar-brand" routerLink="/">Dating App 📅 </a>
+      
 
       <ul *ngIf="currentUser$ | async " class="navbar-nav mr-auto">
         <li class="nav-item ">
-          <a class="nav-link" href="#">Matches</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/members">Matches</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Lists</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/lists">Lists</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Messages</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
         </li>
 
       </ul>
