--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -4,7 +4,8 @@
     <a class="navbar-brand" routerLink="/">Dating App 📅 </a>
       
 
-      <ul *ngIf="currentUser$ | async " class="navbar-nav mr-auto">
+      <ul  class="navbar-nav mr-auto">
+        <ng-container *ngIf="currentUser$ | async ">
         <li class="nav-item ">
           <a class="nav-link" routerLinkActive="active" routerLink="/members">Matches</a>
         </li>
@@ -14,7 +15,7 @@
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
         </li>
-
+      </ng-container>
       </ul>
 
       <div class="dropdown" *ngIf="currentUser$ | async" dropdown>
