--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -18,8 +18,8 @@
       </ng-container>
       </ul>
 
-      <div class="dropdown" *ngIf="currentUser$ | async" dropdown>
-        <a class="text-light dropdown-toggle" dropdownToggle >welcome user</a>
+      <div class="dropdown" *ngIf="currentUser$ | async as user" dropdown>
+        <a class="text-light dropdown-toggle" dropdownToggle >Welcome {{user.username | titlecase}}</a>
         <div class="dropdown-menu mt-3" *dropdownMenu>
           <a class="dropdown-item">Edit Profile</a>
           <li class="dropdown-divider"></li>
