--- a/DatingApp/client/src/app/nav/nav.component.html
+++ b/DatingApp/client/src/app/nav/nav.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/errors">Errors</a>
+        </li>
       </ng-container>
       </ul>
 
