--- a/DatingApp/client/src/app/members/member-list/member-list.component.html
+++ b/DatingApp/client/src/app/members/member-list/member-list.component.html
@@ -1,8 +1,7 @@
 <div class="row">
-    <div class="col-2">
-      <p *ngFor="let member of members">
-        <app-member-card [member]="member"></app-member-card>
-      </p>
-    </div>
+
+  <div class="col-2" *ngFor="let member of members">
+    <app-member-card [member]="member"></app-member-card>
   </div>
-  
+
+</div>
