--- a/DatingApp/client/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp/client/src/app/members/member-edit/member-edit.component.html
@@ -39,7 +39,7 @@
   <div class="col-8">
     <tabset class="member-tabset">
       <tab heading="About {{member.knownAs}}">
-        <form #editForm="ngForm"  id="editForm">
+        <form #editForm="ngForm" (ngSubmit)="updateMember()" id="editForm">
           <h4>Description</h4>
           <textarea name="introduction" [(ngModel)]="member.introduction" class="form-control" rows="6"></textarea>
           <h4 class="mt-2">Looking for</h4>
